# GalaxyEngine

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  install.bat  install.sh  vcpkg-configuration.json  vcpkg.json
include/: Engine.h  ModuleInterface.h  VulkanBase.h
include/application/: galaxy_engine.h  logger.h  utils.h  window.h
include/graphics/: graphics.h
lib/GERender/: CMakeLists.txt
lib/GERender/src/: GraphicsBase.cpp  GraphicsBase.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDeivce.cpp  PhysicalDeivce.h  SwapChain.cpp  SwapChain.h  WindowSurface.cpp  WindowSurface.h  graphics_base.cpp  graphics_base.h  render.cpp  render.h
lib/GEui/: CMakeLists.txt
lib/GEui/src/: library.h
resources/: settings.yaml
src/: Engine.cpp  README.md  main.cpp
src/application/: galaxy_engine.cpp  logger.cpp  utils.cpp  window.cpp
src/core/: AsyncLoader.cpp  AsyncLoader.h  Engine.cpp  FiberManager.cpp  FiberManager.h  MemoryManager.cpp  MemoryManager.h  ModuleInterface.cpp  ModuleInterface.h  ModuleManager.cpp  ModuleManager.h  TaskScheduler.cpp  TaskScheduler.h  VulkanBase.cpp  VulkanBase.h
src/core/config/: config.cpp  config.h
src/core/log/: Logger.cpp  Logger.h  logger.cpp  logger.h
src/core/window/: Window.cpp  Window.h
src/engine/render/: a.cpp
src/graphics/: graphics.cpp
src/platform/: a.cpp
src/ui/: a.cpp  a.h
src/utils/: Utils.cpp  Utils.h
test/: a.cpp
